# Client

./: Cargo.toml
src/: client.rs
tests/: assembler.rs  basic.rs  network_discovery_protocol.rs  server_type.rs
