[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
dronegowski_utils = { git = "https://github.com/ADVPROG-2024/dronegowski_utils.git" }
crossbeam-channel = "0.5.14"
log = "0.4.22"
simplelog = "^0.12.0"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
